# link-stash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prisma.config.ts
.github/workflows/: release.yml
docs/: DEVELOPING.md  RELEASING.md
extension/: README.md  background.js  manifest.json
frontend/: index.html
prisma/: schema.prisma
prisma/migrations/20260709021119_init/: migration.sql
prisma/migrations/20260709130000_recategorize_kinds/: migration.sql
prisma/migrations/20260710120000_add_item_notes/: migration.sql
prisma/migrations/20260710130000_add_bookmarks/: migration.sql
scripts/: build-desktop.mjs  fetch-ocr-assets.mjs  merge-manifest.mjs  setup.mjs  updater-fragment.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: ocr.ts  (+7 more)
src/components/: add-item.tsx  app-shell.tsx  article-hydrator.tsx  article-reader.tsx  auth-form.tsx  bookmarks-bar.tsx  confirm-button.tsx  epub-reader.tsx  favorite-button.tsx  highlights-list.tsx  import-backup.tsx  item-actions.tsx  item-card.tsx  item-notes.tsx  item-organizer.tsx  lookup-panel.tsx  note-composer.tsx  pdf-annotations.tsx  pdf-reader.tsx  read-aloud.tsx  search-box.tsx  sync-panel.tsx  theme-toggle.tsx
src/lib/: bookmarks.ts  constants.ts  dal.ts  db.ts  doc-text.ts  extract.ts  import-parsers.ts  items.ts  mode.ts  notes.ts  search.ts  session.ts  storage.ts  sync.ts  validation.ts
(+21 files in other folders)
