[package]
name = "linkstash"
version = "0.3.0"
description = "LinkStash — your personal knowledge library"
authors = ["LinkStash contributors"]
license = "MIT"
repository = "https://github.com/AvishkaWeebadde/link-stash"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linkstash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Open external links in the user's default browser.
open = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Check GitHub Releases for a newer version and self-update (desktop only).
tauri-plugin-updater = "2"
